Removed private Google Maps API Key, added Email functionalities and miscellaneous changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,10 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=mail.tu-chemnitz.de
 spring.mail.port=587
-spring.mail.username=shohun.rep
-spring.mail.password=Chocolate0167
+spring.mail.username=mdsh
+spring.mail.password=Chocolate0167-
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
